<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logoeditcliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/imgcategoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/categoria64" />

    <LinearLayout
        android:id="@+id/LLbtnclosecategoryinventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cerrarEditCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnClose"
            app:srcCompat="@drawable/equis" />
    </LinearLayout>


    <TextView
        android:id="@+id/titleeditCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleCategoriaproduct"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/logoeditcliente"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titladdcategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/titleCategoriaproduct"
        app:layout_constraintBottom_toTopOf="@+id/ETaddnameCateoriaproducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoeditcliente"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/ETaddnameCateoriaproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/titleCategoriaproduct"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titladdcategoria"
        tools:targetApi="O" />

    <TextView
        android:id="@+id/ttleaqddcategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/descripcioncategoriaproducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETaddnameCateoriaproducto" />

    <EditText
        android:id="@+id/EDadddescripcategoriaproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=" "
        android:ems="10"
        android:hint="@string/descripcioncategoriaproducto"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttleaqddcategoria"
        tools:targetApi="O" />

    <Button
        android:id="@+id/BtnSavaAddcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/fondoblackredondo"
        android:text="@string/btn_enviar"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>